|
php.net | support | documentation | report a bug | advanced search | search howto | statistics | random bug | login |
PatchesPull RequestsHistoryAllCommentsChangesGit/SVN commits
[2008-09-13 20:32 UTC] neko at nekochan dot net
[2008-09-13 21:40 UTC] cellog@php.net
[2008-09-14 02:44 UTC] neko at nekochan dot net
[2008-09-14 04:48 UTC] neko at nekochan dot net
[2008-09-14 06:37 UTC] cellog@php.net
[2008-09-14 06:47 UTC] cellog@php.net
|
|||||||||||||||||||||||||||
Copyright © 2001-2026 The PHP GroupAll rights reserved. |
Last updated: Fri Sep 25 05:00:01 2026 UTC |
Description: ------------ Description: ------------ Able to compile up to and including php-5.2.6 without error (and run in a production environment). My attempt to build php-5.3.0alpha2 dies in util.c (multiple errors) Reproduce code: --------------- './configure' '--prefix=/usr/nekoware/php5' '--enable-dba' '--enable-dbx' '--enable-calendar' '--enable-wddx' '--with-config-file-path=/usr/nekoware/etc/php5' '--with-apxs2=/usr/nekoware/apache2/bin/apxs' '--enable-cli' '--with-libxml-dir=/usr/nekoware' '--with-expat-dir=/usr/nekoware' '--with-png-dir=/usr/nekoware' '--with-jpeg-dir=/usr/nekoware' '--with-freetype-dir=/usr/nekoware' '--with-zlib-dir=/usr/nekoware' '--with-zlib' '--with-curlwrappers' '--with-curl=shared,/usr/nekoware' '--with-openssl=shared,/usr/nekoware' '--with-mysql=shared,mysqlnd' '--with-mysqli=shared,mysqlnd' '--with-mhash=shared,/usr/nekoware' '--with-mcrypt=shared,/usr/nekoware' '--with-bz2=shared,/usr/nekoware' '--enable-ftp=shared' '--enable-sockets=shared' '--with-gd=shared '--enable-exif=shared' '--enable-dbase=shared' '--with-xmlrpc' '--with-gettext=shared,/usr/nekoware' '--with-iconv-dir=/usr/nekoware' '--enable-mbstring=shared' '--enable-sysvsem=shared' '--enable-sysvshm=shared' '--enable-sysvmsg=shared' '--with-xpm-dir=/usr/lib32' '--enable-zip=shared' '--with-pgsql=shared,/usr/nekoware/pgsql' '--with-tsrm-st' Expected result: ---------------- Completed build. Actual result: -------------- /bin/sh /opt/build/php-5.3.0alpha2/libtool --silent --preserve-dup- deps --mode=compile c99 -Iext/phar/ -I/opt/build/php- 5.3.0alpha2/ext/phar/ -DPHP_ATOM_INC -I/opt/build/php- 5.3.0alpha2/include -I/opt/build/php-5.3.0alpha2/main - I/opt/build/php-5.3.0alpha2 -I/opt/build/php- 5.3.0alpha2/ext/ereg/regex -I/usr/nekoware/include/libxml2 - I/usr/nekoware/include -I/opt/build/php-5.3.0alpha2/ext/date/lib - I/usr/nekoware/include/freetype2 -I/opt/build/php- 5.3.0alpha2/ext/mbstring/oniguruma -I/opt/build/php- 5.3.0alpha2/ext/mbstring/libmbfl -I/opt/build/php- 5.3.0alpha2/ext/mbstring/libmbfl/mbfl - I/usr/nekoware/mysql5/include/mysql -I/opt/build/php- 5.3.0alpha2/ext/sqlite3/libsqlite -I/usr/nekoware/pgsql/include - I/opt/build/php-5.3.0alpha2/TSRM -I/opt/build/php-5.3.0alpha2/Zend - D_XPG_IV -L/usr/nekoware/lib -L/usr/lib32 -I/usr/include -mips4 -O2 - I/usr/nekoware/include -I/usr/include -Wl,-rpath - Wl,/usr/nekoware/lib:/usr/nekoware/mysql5/lib/mysql - OPT:Olimit=0:roundoff=3 -TARG:platform=IP35:proc=r16000 -c /opt/build/php-5.3.0alpha2/ext/phar/util.c -o ext/phar/util.lo cc-3604 c99: WARNING File = /opt/build/php- 5.3.0alpha2/Zend/zend_alloc.h, Line = 87 missing return statement at end of non-void function "__zend_malloc" } ^ cc-3604 c99: WARNING File = /opt/build/php- 5.3.0alpha2/Zend/zend_alloc.h, Line = 104 missing return statement at end of non-void function "__zend_realloc" } ^ cc-3970 c99: WARNING File = /opt/build/php- 5.3.0alpha2/Zend/zend_execute.h, Line = 70 conversion from pointer to same-sized integral type (potential portability problem) FREE_ZVAL_REL(p); ^ cc-3970 c99: WARNING File = /opt/build/php- 5.3.0alpha2/Zend/zend_execute.h, Line = 272 conversion from pointer to same-sized integral type (potential portability problem) int delete_count = (int)(zend_uintptr_t) *p; ^ cc-3970 c99: WARNING File = /opt/build/php- 5.3.0alpha2/Zend/zend_execute.h, Line = 285 conversion from pointer to same-sized integral type (potential portability problem) int arg_count = (int)(zend_uintptr_t) *p; ^ cc-1079 c99: ERROR File = /opt/build/php-5.3.0alpha2/ext/phar/tar.h, Line = 46 A type specifier is expected. } PHAR_TAR_PACK old_tar_header; ^ cc-1065 c99: ERROR File = /opt/build/php-5.3.0alpha2/ext/phar/tar.h, Line = 46 A semicolon is expected at this point. } PHAR_TAR_PACK old_tar_header; ^ cc-1079 c99: ERROR File = /opt/build/php-5.3.0alpha2/ext/phar/tar.h, Line = 83 A type specifier is expected. } PHAR_TAR_PACK tar_header; ^ cc-1101 c99: WARNING File = /opt/build/php-5.3.0alpha2/ext/phar/tar.h, Line = 83 "__attribute__" has already been declared in the current scope. } PHAR_TAR_PACK tar_header; ^ cc-1065 c99: ERROR File = /opt/build/php-5.3.0alpha2/ext/phar/tar.h, Line = 83 A semicolon is expected at this point. } PHAR_TAR_PACK tar_header; ^ cc-1047 c99: WARNING File = /usr/include/stdint.h, Line = 153 Macro "WCHAR_MIN" (declared at line 121 of "/usr/include/internal/wchar_core.h") has an incompatible redefinition. #define WCHAR_MIN INT32_MIN ^ cc-1047 c99: WARNING File = /usr/include/stdint.h, Line = 154 Macro "WCHAR_MAX" (declared at line 118 of "/usr/include/internal/wchar_core.h") has an incompatible redefinition. #define WCHAR_MAX INT32_MAX ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 42 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_file_header; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 42 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_file_header; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 42 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_file_header; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 48 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_data_desc; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 48 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_data_desc; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 48 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_data_desc; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 56 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_data_desc_zip64; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 56 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_data_desc_zip64; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 56 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_data_desc_zip64; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 62 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_archive_extra_data_record; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 62 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_archive_extra_data_record; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 62 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_archive_extra_data_record; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 141 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_extra_field_header; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 141 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_extra_field_header; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 141 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_extra_field_header; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 152 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_unix3; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 152 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_unix3; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 152 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_unix3; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 176 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_central_dir_file; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 176 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_central_dir_file; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 176 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_central_dir_file; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 181 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_dir_signature; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 181 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_dir_signature; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 181 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_dir_signature; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 207 A type specifier is expected. } PHAR_ZIP_PACK phar_zip64_dir_end; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 207 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip64_dir_end; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 207 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip64_dir_end; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 219 A type specifier is expected. } PHAR_ZIP_PACK phar_zip64_dir_locator; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 219 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip64_dir_locator; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 219 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip64_dir_locator; ^ cc-1079 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 236 A type specifier is expected. } PHAR_ZIP_PACK phar_zip_dir_end; ^ cc-1101 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 236 "__attribute__" has already been declared in the current scope. } PHAR_ZIP_PACK phar_zip_dir_end; ^ cc-1065 c99: ERROR File = /opt/build/php- 5.3.0alpha2/ext/phar/pharzip.h, Line = 236 A semicolon is expected at this point. } PHAR_ZIP_PACK phar_zip_dir_end; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 273 A signed bit field has a length of 1 bit. int is_crc_checked:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 274 A signed bit field has a length of 1 bit. int is_modified:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 275 A signed bit field has a length of 1 bit. int is_deleted:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 276 A signed bit field has a length of 1 bit. int is_dir:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 279 A signed bit field has a length of 1 bit. int is_mounted:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 282 A signed bit field has a length of 1 bit. int is_temp_dir:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 286 A signed bit field has a length of 1 bit. int is_tar:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 290 A signed bit field has a length of 1 bit. int is_zip:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 292 A signed bit field has a length of 1 bit. int is_persistent:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 329 A signed bit field has a length of 1 bit. int is_temporary_alias:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 330 A signed bit field has a length of 1 bit. int is_modified:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 331 A signed bit field has a length of 1 bit. int is_writeable:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 332 A signed bit field has a length of 1 bit. int is_brandnew:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 334 A signed bit field has a length of 1 bit. int donotflush:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 336 A signed bit field has a length of 1 bit. int is_zip:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 338 A signed bit field has a length of 1 bit. int is_tar:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 340 A signed bit field has a length of 1 bit. int is_data:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 342 A signed bit field has a length of 1 bit. int is_persistent:1; ^ cc-3968 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 436 implicit conversion of a 64-bit integral type to a smaller integral type (potential portability problem) entry->offset = offset; ^ cc-3968 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 441 implicit conversion of a 64-bit integral type to a smaller integral type (potential portability problem) data->offset = offset; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 484 A signed bit field has a length of 1 bit. int for_write:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 485 A signed bit field has a length of 1 bit. int is_zip:1; ^ cc-1107 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/phar_internal.h, Line = 486 A signed bit field has a length of 1 bit. int is_tar:1; ^ cc-3968 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/util.c, Line = 238 implicit conversion of a 64-bit integral type to a smaller integral type (potential portability problem) entry.uncompressed_filesize = entry.compressed_filesize = ssb.sb.st_size; ^ cc-3968 c99: WARNING File = /opt/build/php- 5.3.0alpha2/ext/phar/util.c, Line = 1654 implicit conversion of a 64-bit integral type to a smaller integral type (potential portability problem) Z_STRLEN_P(zdata) = end; ^ 26 errors detected in the compilation of "/opt/build/php- 5.3.0alpha2/ext/phar/util.c". gmake: *** [ext/phar/util.lo] Error 1