fix compile on IRIX with MIPSPro (Bug #46072)